# optimal_reps

./: .gitignore  Cargo.toml  DEVELOPER_TO_DO.md  README.md  logfile.lp  logfile_2.lp  logfile_new.lp  logfile_tri_loss_neg.lp  logfile_tri_loss_new.lp  logfile_tri_loss_pos.lp  simple_example.txt
data_text/: debug_example.txt  debug_example_2.txt
npy_debug_cycle/: weighted_edge_answer_coeffs.npy  weighted_edge_answer_vertices.npy
npy_file_cycle_2/: orig_coeffs.npy  orig_vertices.npy  uniform_edge_answer_coeffs.npy  uniform_edge_answer_vertices.npy
npy_file_cycle_2_new/: orig_coeffs.npy  orig_vertices.npy  uniform_edge_answer_coeffs.npy  uniform_edge_answer_vertices.npy
npy_files/: orig_coeffs.npy  orig_vertices.npy  uniform_answer_coeffs.npy  uniform_answer_vertices.npy  uniform_edge_answer_coeffs.npy  uniform_tri_answer_coeffs.npy  weighted_edge_answer_coeffs.npy  weighted_tri_answer_coeffs.npy
npy_files_cycle_2/: orig_coeffs.npy  weighted_edge_answer_coeffs.npy
npy_files_dis_mat_cycle_0/: weighted_edge_answer_coeffs.npy  weighted_edge_answer_vertices.npy
npy_files_dis_mat_cycle_2/: weighted_edge_answer_coeffs.npy
simplex_bar/: 3_d_birth_time.npy
src/: demo_enum.rs  lib.rs  main.rs  simplex_bar.rs
src/demo_files/: demo_enum.rs  example.rs
test_index_2/: uniform_tri_loss_coeffs.npy  uniform_tri_loss_vertices.npy
test_index_3/: uniform_tri_loss_coeffs.npy  uniform_tri_loss_vertices.npy
