[package]
name = "optimal_representatives"
version = "0.1.0"
authors = ["Lu Li <lli1@macalester.edu>", "Gregory <greg.henselman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.15.1", features = ["rayon"] }
# exhact = {path = "/Users/luli/Developer/exhact_rust-devel_haibin_comments"}
exhact = {path = "/Users/gh10/a/c/pr/xh/r/exhact_rust_git"}
num = "0.4.0"
ordered-float = "2.2.0"
gurobi = "0.3.4"
good_lp = "1.1.3"
float_eq = "0.6.0"
numopt = "0.2.1"
coin_cbc = "0.1.5"
sprs = "0.10.0"
lp-solvers = "0.0.4"
